objects/LLC_BI__Credit_Memo__c.object
<CustomObject>
    <description>The Credit Memo Object, stores the templates used for the credit memo records, as well as the credit memo records for the loans within nCino</description>
    <fields>
        <fullName>LLC_BI__Description__c</fullName>
        <description>This field is optional. It is populated by an administrator. The value of this field is displayed on the Credit Memo selection page and should be used to help the user choose the appropriate template.</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__FScreen__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is required. It is populated when the credit memo is created from template. This field is a lookup to the Force framework Screen record, which is a parent of Screen Sections that make up the credit memo.</description>
        <label>Force Screen</label>
        <referenceTo>nFORCE__Screen__c</referenceTo>
        <relationshipLabel>Credit Memos</relationshipLabel>
        <relationshipName>Credit_Memos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional. It defaults to false and can be updated by administrator. When set to true, the disabled credit memo template will not be shown on the Credit Memo selection page. This field should only be used for credit memo records that are templates.</description>
        <inlineHelpText>Disabled credit memo templates will not be shown on the Credit Memo selection page.</inlineHelpText>
        <label>Is Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Template__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field is optional. It defaults to false and when set to to true, it indicates the record is a template. When set to true, the credit memo will appear as a template option on the Credit Memo selection page.</description>
        <label>Is Template</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Linked_Placeholder_Id__c</fullName>
        <description>This field is optional. When a Credit Memo Version is saved to Document Manager, the Id of the selected placeholder is populated into this field via Apex. It is used to display the most recently used placeholder in the Save Version modal.</description>
        <inlineHelpText>The Id of the most recently used placeholder in the Save Version modal. When populated, the modal displays the name of this placeholder as default.</inlineHelpText>
        <label>Linked Placeholder Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Object_API_Name__c</fullName>
        <description>This field is optional. It defaults to empty. This field should be used by administrator to designate which objects a template credit memo should be available for. The administrator should add the API name of the object which will add the template option to the Credit Memo selection page when accessed from that object.</description>
        <inlineHelpText>The API name of the object this credit memo is used on.</inlineHelpText>
        <label>Object API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Screen__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This field is no longer used.</description>
        <label>Screen</label>
        <referenceTo>nDESIGN__Screen__c</referenceTo>
        <relationshipLabel>Credit Memos</relationshipLabel>
        <relationshipName>Credit_Memos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The field is optional. If populated, the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Credit Memo</label>
    <listViews>
        <fullName>All_Credit_Memos</fullName>
        <columns>NAME</columns>
        <columns>LLC_BI__FScreen__c</columns>
        <columns>LLC_BI__Is_Template__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Credit Memos</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Credit_Memo_Template_View</fullName>
        <columns>NAME</columns>
        <columns>LLC_BI__FScreen__c</columns>
        <columns>LLC_BI__Is_Template__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LLC_BI__Is_Template__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Credit Memo Template View</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Credit Memo Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Credit Memos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>LLC_BI__FScreen_Required</fullName>
        <active>false</active>
        <description>FScreen is required.</description>
        <errorConditionFormula>ISBLANK( LLC_BI__FScreen__c )</errorConditionFormula>
        <errorMessage>FScreen is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LLC_BI__Screen_Required</fullName>
        <active>false</active>
        <description>Screen is required.</description>
        <errorConditionFormula>ISBLANK( LLC_BI__Screen__c )</errorConditionFormula>
        <errorMessage>Screen is required.</errorMessage>
    </validationRules>
</CustomObject>